--- a/index.html
+++ b/index.html
@@ -9,3 +9,9 @@
     <script src="game.js"></script>
   </body>
 </html>
+const canvas = document.getElementById('gameCanvas');
+const ctx = canvas.getContext('2d');
+
+// Draw a blue square
+ctx.fillStyle = 'blue';
+ctx.fillRect(50, 50, 80, 80);
