--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Multiverse Reckoning - 2D Fighter</title>
-  </head>
-  <body>
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
-    <script src="game.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Square on Floor</title>
+</head>
+<body>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <script src="game.js"></script>
+</body>
 </html>
